--- a/package.json
+++ b/package.json
@@ -1,24 +1,56 @@
 {
-  "name": "cryptoforknote-util",
-  "version": "3.0.0",
-  "main": "cryptoforknote-util",
+  "_from": "git://github.com/MoneroOcean/node-cryptoforknote-util.git",
+  "_id": "cryptoforknote-util@2.0.0",
+  "_inBundle": false,
+  "_location": "/cryptoforknote-util",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "git",
+    "raw": "cryptoforknote-util@git://github.com/MoneroOcean/node-cryptoforknote-util.git",
+    "name": "cryptoforknote-util",
+    "escapedName": "cryptoforknote-util",
+    "rawSpec": "git://github.com/MoneroOcean/node-cryptoforknote-util.git",
+    "saveSpec": "git://github.com/MoneroOcean/node-cryptoforknote-util.git",
+    "fetchSpec": "git://github.com/MoneroOcean/node-cryptoforknote-util.git",
+    "gitCommittish": null
+  },
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "git://github.com/MoneroOcean/node-cryptoforknote-util.git#473f81f81bc55a1fc4c6f5ce55d1feb9b9cf6f61",
+  "_spec": "cryptoforknote-util@git://github.com/MoneroOcean/node-cryptoforknote-util.git",
+  "_where": "/home/ubuntu/pool",
   "author": {
     "name": "LucasJones",
     "email": "lucasjonesdev@hotmail.co.uk"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MoneroOcean/node-cryptoforknote-util.git"
+  "bugs": {
+    "url": "https://github.com/MoneroOcean/node-cryptoforknote-util/issues"
   },
+  "bundleDependencies": false,
   "dependencies": {
     "bindings": "*",
     "nan": "^2.0.0"
   },
+  "deprecated": false,
+  "description": "Node-CryptoForkNote-Util ====================",
+  "gypfile": true,
+  "homepage": "https://github.com/MoneroOcean/node-cryptoforknote-util#readme",
   "keywords": [
     "cryptonight",
     "cryptonote",
     "forknote",
     "bytecoin",
     "monero"
-  ]
+  ],
+  "main": "cryptoforknote-util",
+  "name": "cryptoforknote-util",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MoneroOcean/node-cryptoforknote-util.git"
+  },
+  "scripts": {
+    "install": "node-gyp rebuild"
+  },
+  "version": "2.0.0"
 }
