--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "_from": "git://github.com/MoneroOcean/node-cryptoforknote-util.git",
-  "_id": "cryptoforknote-util@2.0.0",
+  "_from": "git://github.com/cash2/cash2-nodejs.git",
+  "_id": "cash2-nodejs@1.0.0",
   "_inBundle": false,
-  "_location": "/cryptoforknote-util",
+  "_location": "/cash2-nodejs",
   "_phantomChildren": {},
   "_requested": {
     "type": "git",
-    "raw": "cryptoforknote-util@git://github.com/MoneroOcean/node-cryptoforknote-util.git",
-    "name": "cryptoforknote-util",
-    "escapedName": "cryptoforknote-util",
-    "rawSpec": "git://github.com/MoneroOcean/node-cryptoforknote-util.git",
-    "saveSpec": "git://github.com/MoneroOcean/node-cryptoforknote-util.git",
-    "fetchSpec": "git://github.com/MoneroOcean/node-cryptoforknote-util.git",
+    "raw": "cash2-nodejs@git://github.com/cash2/cash2-nodejs.git",
+    "name": "cash2-nodejs",
+    "escapedName": "cash2-nodejs",
+    "rawSpec": "git://github.com/cash2/cash2-nodejs.git",
+    "saveSpec": "git://github.com/cash2/cash2-nodejs.git",
+    "fetchSpec": "git://github.com/cash2/cash2-nodejs.git",
     "gitCommittish": null
   },
   "_requiredBy": [
     "/"
   ],
-  "_resolved": "git://github.com/MoneroOcean/node-cryptoforknote-util.git#473f81f81bc55a1fc4c6f5ce55d1feb9b9cf6f61",
-  "_spec": "cryptoforknote-util@git://github.com/MoneroOcean/node-cryptoforknote-util.git",
+  "_resolved": "git://github.com/cash2/cash2-nodejs.git#07fd4414ca7388b323e646707dade41cfae91cc1",
+  "_spec": "cash2-nodejs@git://github.com/cash2/cash2-nodejs.git",
   "_where": "/home/ubuntu/pool",
   "author": {
-    "name": "LucasJones",
-    "email": "lucasjonesdev@hotmail.co.uk"
+    "name": "aphivantrakul",
+    "email": "cash2@protonmail.com"
   },
   "bugs": {
-    "url": "https://github.com/MoneroOcean/node-cryptoforknote-util/issues"
+    "url": "https://github.com/cash2/cash2-nodejs/issues"
   },
   "bundleDependencies": false,
   "dependencies": {
@@ -33,21 +33,19 @@
     "nan": "^2.0.0"
   },
   "deprecated": false,
-  "description": "Node-CryptoForkNote-Util ====================",
+  "description": "Cash2-Nodejs based on Node-CryptoForkNote-Util ====================",
   "gypfile": true,
-  "homepage": "https://github.com/MoneroOcean/node-cryptoforknote-util#readme",
+  "homepage": "https://github.com/cash2/cash2-nodejs#readme",
   "keywords": [
-    "cryptonight",
+    "blake2b",
     "cryptonote",
-    "forknote",
-    "bytecoin",
-    "monero"
+    "cash2"
   ],
-  "main": "cryptoforknote-util",
-  "name": "cryptoforknote-util",
+  "main": "cash2-nodejs",
+  "name": "cash2-nodejs",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MoneroOcean/node-cryptoforknote-util.git"
+    "url": "git+https://github.com/cash2/cash2-nodejs.git"
   },
   "scripts": {
     "install": "node-gyp rebuild"
